# mcp-test-loop

./: .gitignore  README.md
docs/: CONFIG.md  PRD.md
python/: pyproject.toml
python/config/: motion_control_presets.yaml  preset_topic_mapping.yaml  servers.yaml
python/knowledge/skills/communication-fault/: SKILL.md
python/knowledge/skills/gait-instability/: SKILL.md
python/src/manastone_diag/: config.py
python/src/manastone_diag/control/: __init__.py  preset_executor.py  ui_control.py
python/src/manastone_diag/llm/: client.py
python/src/manastone_diag/schema/: loader.py
python/src/manastone_diag/servers/: motion.py  motion_control.py
python/src/mcp_test_loop/: discovery.py
python/src/mcp_test_loop/control/: preset_executor.py  ui.py
python/src/mcp_test_loop/servers/: motion_control.py
python/tests/: test_basic.py  test_extensions.py
runtime/: loop.example.yaml  package-lock.json  package.json  tsconfig.json
runtime/src/: config.ts  main.ts  mcp-sse-client.ts  runtime.ts
scripts/: start-control.sh  start-observation-mock.sh
